Fixed display on small devices.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,7 +30,6 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 }
 
 h2 {
-  font-size: 4rem;
   letter-spacing: -0.05rem;
   margin: 0 0 1rem 0;
   line-height: 1;
@@ -53,7 +52,6 @@ hr {
   display: block;
   margin: 2rem auto;
   width: 40%;
-
 }
 
 .sidebar-container {
@@ -123,6 +121,9 @@ footer {
 
 
 @media (max-width: 768px) {
+  h1 {
+    font-size: 3rem;
+  }
   .sidebar nav ul {
     margin: 0;
     padding: 1rem 0;
@@ -138,6 +139,9 @@ footer {
 }
 
 @media (min-width: 768px) {
+  h1 {
+    font-size: 4rem;
+  }
   .sidebar-container {
     text-align: right;
     position: relative;
